--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGO=your_mongo_connection_uri
 CLIENTID=your_application_client_id
 GUILDID=your_guild_id
 OWNER=your_discord_id
+ADMIN_PREFIX=your_admin_prefix_here
